fix(tax): overflow visible on first column td so chip ellipsis works

--- a/web/style.css
+++ b/web/style.css
@@ -783,6 +783,7 @@ table {
   width: 260px;
   text-align: left;
   padding-left: 30px;
+  overflow: visible;
 }
 
 .tax-table-fixed td:nth-child(2),
